# red-hat-ai-examples

./: .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .mergify.yml  .pre-commit-config.yaml  .secrets.baseline  .talismanrc  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  ruff.toml  setup-dev.sh  test-install.sh
.github/: PULL_REQUEST_TEMPLATE.MD  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  pr-code-review.yml
assets/usecase/knowledge-tuning/: Knowledge Tuning Workflow.excalidraw
docs/: CI_IMPLEMENTATION_SUMMARY.md  CI_SETUP.md  QUICK_REFERENCE.md
examples/domain_customization_kfp_pipeline/: README.md  env.example  kfp_enhanced_summary_knowledge_tuning.py
examples/fine-tuning/osft/: README.md  osft-example.ipynb
examples/fine-tuning/training-hub/sft/: README.md  sft.ipynb
examples/knowledge-tuning/: .env.example
examples/knowledge-tuning/00_Setup/: .env.example  00_Setup_README.md
examples/knowledge-tuning/01_Base_Model_Evaluation/: Base_Model_Evaluation.ipynb
examples/knowledge-tuning/02_Data_Processing/: Data_Processing.ipynb  pyproject.toml
examples/knowledge-tuning/03_Knowledge_Generation/: Knowledge_Generation.ipynb
examples/knowledge-tuning/04_Knowledge_Mixing/: Knowledge_Mixing.ipynb
examples/knowledge-tuning/05_Model_Training/: Model_Training.ipynb
examples/knowledge-tuning/06_Evaluation/: Evaluation.ipynb
examples/llmcompressor/: README.md  oneshot_pipeline.py  workbench_example.ipynb
scripts/: install-dev-tools.sh
tests/: test_example.py
(+2 files in other folders)
