[project]
name = "ai-tools"
version = "0.1.0"
description = "Tools and utilities required to run the examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.34.0",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"


[tool.uv.sources]
ai_tools = { workspace= false }

[tool.uv.workspace]
members = [
    "examples/knowledge-tuning/01_Data_Preprocessing",
]
